--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "pinia": "^2.2.4",
     "socket.io-client": "^4.8.0",
+    "uuid": "^10.0.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
