--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-vue": "^9.29.0",
     "jsdom": "^25.0.1",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.80.5",
     "start-server-and-test": "^2.0.8",
     "vite": "^5.4.8",
     "vitest": "^2.1.2"
