--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "pinia": "^2.2.4",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
