--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,15 +2,8 @@ version: '3'
 
 services:
 
-#  node:
-#    image: node:latest
-#    working_dir: /usr/src/app
-#    volumes:
-#      - ./server:/usr/src/app
-#    command: tail -f /dev/null
-
   socketio:
-    image: node:latest
+    image: node:20
     ports:
       - '3000:3000'
     working_dir: /app
@@ -20,7 +13,7 @@ services:
 #    command: tail -f /dev/null
 
   app:
-    image: node:latest
+    image: node:20
     ports:
       - '5173:5173'
     working_dir: /app
