--- a/server/package.json
+++ b/server/package.json
@@ -2,13 +2,39 @@
   "name": "socket-io-server",
   "version": "1.0.0",
   "description": "A simple Socket.io server",
-  "main": "server.js",
+  "main": "src/server.ts",
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "dev": "nodemon",
+    "start": "node dist/server.js",
+    "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.0.1",
+    "@types/reflect-metadata": "^0.0.5",
+    "bcrypt": "^5.1.1",
+    "concurrently": "^9.1.0",
     "express": "^4.18.2",
-    "socket.io": "^4.0.0"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.7",
+    "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.0.0",
+    "tsyringe": "^4.8.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.16.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.1",
+    "@types/socket.io": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
+    "globals": "^15.13.0",
+    "prisma": "^6.0.1",
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   }
 }
