--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
     "pinia": "^2.2.4",
     "socket.io-client": "^4.8.0",
