--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon",
     "start": "node dist/server.js",
     "lint": "eslint",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test": "vitest"
   },
   "dependencies": {
     "@prisma/client": "^6.0.1",
@@ -28,7 +27,6 @@
     "@eslint/js": "^9.16.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
     "@types/socket.io": "^3.0.1",
@@ -36,12 +34,11 @@
     "@typescript-eslint/parser": "^8.17.0",
     "eslint": "^9.16.0",
     "globals": "^15.13.0",
-    "jest": "^29.7.0",
     "prisma": "^6.0.1",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.17.0"
+    "typescript-eslint": "^8.17.0",
+    "vitest": "^2.1.8"
   }
 }
