--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "es2022",
+    "module": "es2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "strict": true,
@@ -11,12 +11,13 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist",
     "rootDir": "./",
+    "types": ["vitest/globals"],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
   "include": [
-    "server.ts",
-    "src/**/*.ts"
+    "src",
+    "src/types",
   ]
 }
