--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
     "@types/reflect-metadata": "^0.0.5",
     "bcrypt": "^5.1.1",
     "concurrently": "^9.1.0",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.0.0",
     "tsyringe": "^4.8.0",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
